RESOLVED FIXED64867
[GTK] REGRESSION(r86436): does not add newlines when return is pressed with some modifiers held
https://bugs.webkit.org/show_bug.cgi?id=64867
Summary [GTK] REGRESSION(r86436): does not add newlines when return is pressed with s...
Gustavo Noronha (kov)
Reported 2011-07-20 06:22:06 PDT
My laptop (a lenovo x200s) seems to have numlock in an always-on state; I noticed that after that revision (I bisected), enter no longer generates new lines on any textareas. It is caused apparently by the fact that numlock is on. You can reproduce it in normal keyboards by turning capslock on.
Attachments
Patch (3.92 KB, patch)
2011-07-20 06:48 PDT, Gustavo Noronha (kov)
no flags
Gustavo Noronha (kov)
Comment 1 2011-07-20 06:48:47 PDT
Gustavo Noronha (kov)
Comment 2 2011-07-20 06:49:55 PDT
Comment on attachment 101464 [details] Patch How about this? Makes it simpler and should work regardless of what modifiers are on =P
Martin Robinson
Comment 3 2011-07-20 09:38:34 PDT
Comment on attachment 101464 [details] Patch Nice! We may need to backport this to the stable branch.
WebKit Review Bot
Comment 4 2011-07-20 09:52:26 PDT
Comment on attachment 101464 [details] Patch Clearing flags on attachment: 101464 Committed r91376: <http://trac.webkit.org/changeset/91376>
WebKit Review Bot
Comment 5 2011-07-20 09:52:31 PDT
All reviewed patches have been landed. Closing bug.
Gustavo Noronha (kov)
Comment 6 2011-07-20 10:15:20 PDT
(In reply to comment #3) > (From update of attachment 101464 [details]) > Nice! We may need to backport this to the stable branch. The stable branch didn't have the patch that caused the regression on it, which means it's key bindings code is very, very different to what we have now in trunk, plus it doesn't have the regression, so I'd recommend against this =)
Martin Robinson
Comment 7 2011-07-20 10:59:18 PDT
(In reply to comment #6) > (In reply to comment #3) > > (From update of attachment 101464 [details] [details]) > > Nice! We may need to backport this to the stable branch. > > The stable branch didn't have the patch that caused the regression on it, which means it's key bindings code is very, very different to what we have now in trunk, plus it doesn't have the regression, so I'd recommend against this =) Even better!
Note You need to log in before you can comment on or make changes to this bug.