[GTK] REGRESSION(r86436): does not add newlines when return is pressed with some modifiers held https://bugs.webkit.org/show_bug.cgi?id=64867

Patch by Gustavo Noronha Silva <gustavo.noronha@collabora.co.uk> on 2011-07-20
Reviewed by Martin Robinson.

* platform/gtk/KeyBindingTranslator.cpp:
(WebCore::KeyBindingTranslator::getEditorCommandsForKeyEvent):
special-case enter keys so that their commands are returned
whatever the modifiers state.

Canonical link: https://commits.webkit.org/80612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91376 268f45cc-cd09-0410-ab3c-d52691b4dbfc